--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -29,13 +29,16 @@
   cursor: pointer;
 }
 
-.scroll-text {
+.scroll-image {
+  height: 50px;
   position: absolute;
-  color: var(--white);
   bottom: 50px;
-  left: calc(50% - 60px);
-  font-weight: 500;
-  font-size: 40px;
+  left: calc(50% - 19px);
+  fill: var(--primary-grey);
+  stroke: var(--primary-black);
+  stroke-width: 5;
+  cursor: pointer;
+  animation: arrow-down-animation 1.5s infinite;
 }
 
 .home-right-section {
@@ -48,4 +51,5 @@
   position: absolute;
   right: 0;
   top: calc(50% - 40px);
+  margin-right: 10px;
 }
