--- a/src/shared/components/social-button/social-button.css
+++ b/src/shared/components/social-button/social-button.css
@@ -5,8 +5,7 @@
 .container-social-button {
   box-shadow: 0px 0px 50px 8px rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-  width: 50px;
-  height: 50px;
+  padding: 15px;
   display: flex;
   justify-content: center;
   align-items: center;
