--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -11,10 +11,11 @@
 
 .home-text {
   position: absolute;
-  font-size: 250px;
+  font-size: 200px;
   font-weight: 900;
-  top: calc(50% - 300px);
-  left: calc(50% - 250px);
+  top: calc(50% - 250px);
+  left: calc(50% - 180px);
+  z-index: 10;
 }
 
 .home-text-dot {
@@ -24,21 +25,21 @@
 
 .animation-dot {
   position: absolute;
-  animation-name: dot-animation;
-  animation-duration: 0.9s;
   cursor: pointer;
+  animation: dot-animation 0.9s;
 }
 
 .scroll-image {
   height: 50px;
   position: absolute;
   bottom: 50px;
-  left: calc(50% - 19px);
+  left: calc(50% - 16px);
   fill: var(--primary-grey);
   stroke: var(--primary-black);
   stroke-width: 5;
   cursor: pointer;
   animation: arrow-down-animation 1.5s infinite;
+  z-index: 10;
 }
 
 .home-right-section {
@@ -50,6 +51,22 @@
 .container-header {
   position: absolute;
   right: 0;
-  top: calc(50% - 40px);
+  top: calc(50% - 80px);
   margin-right: 10px;
+}
+
+.left-section-animation {
+  animation: left-section-home-animation 1.5s;
+}
+
+.right-section-animation {
+  animation: right-section-home-animation 1.5s;
+}
+
+@media only screen and (max-width: 1000px) {
+  .home-text {
+    font-size: 75px;
+    top: calc(50% - 80px);
+    left: calc(50% - 50px);
+  }
 }
